# Streamlit-Bike-Sharing-Dataset

./: README.MD  notebook.ipynb  pyproject.toml  url.txt
.ipynb_checkpoints/: notebook-checkpoint.ipynb
dashboard/: dashboard.py  processed_df_day.csv  processed_df_hour.csv
